Initial version of landing page with first two cards

--- a/src/index.html
+++ b/src/index.html
@@ -1,27 +1,36 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" type="text/css" href="./assets/styles/main.scss"><!-- do not remove this line! -->
-    <title>UOC Boilerplate</title>
-  </head>
-  <body>
-    <div class="uoc-container">
-      <picture>
-        <source srcset="./assets/images/logo.png?as=webp&width=350" type="image/webp" />
-        <img src="./assets/images/logo.png?width=350" alt="Universitat Oberta de Catalunya" class="uoc-logo" />
-      </picture>
-      <h1 class="uoc-title">Hello, UOC!</h1>
-      <p>
-        This is a starter template for the Advanced HTML and CSS Tools courses
-        from the Master's Program in Multimedia Applications and the Master's
-        Program in Web App and Website Development at the Universitat Oberta de
-        Catalunya.
-      </p>
-    </div>
-    <include src="./views/footer.html"></include>
-    <script type="module" src="./assets/scripts/main.js"></script><!-- do not remove this line! -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" type="text/css" href="./assets/styles/main.scss"><!-- do not remove this line! -->
+  <title>Biblioteca de Bego</title>
+</head>
+
+<body>
+  <include src="./views/header.html"></include>
+
+  <div class="cards">
+    <div class="title">El juego del alma</div>
+    <div class="cover"><img src="./assets/images/eljuegodelalma.jpg" alt="Portada del libro"></div>
+    <div class="author">Javier Castillo</div>
+    <div class="category">Novela negra</div>
+    <div class="summary"> <a href="https://www.javiercastillobooks.com/el-juego-del-alma/">Sinopsis</a></div>
+
+  </div>
+  <div class="cards">
+    <div class="title">¿A qué estás esperando</div>
+    <div class="cover"><img src="./assets/images/aquestasesperando.jpg" alt="Portada del libro"></div>
+    <div class="author">Megan Maxwell</div>
+    <div class="category">Novela romcom</div>
+    <div class="summary"> <a href="https://megan-maxwell.com/libro/a-que-estas-esperando/">Sinopsis</a></div>
+
+  </div>
+
+  <include src="./views/footer.html"></include>
+  <script type="module" src="./assets/scripts/main.js"></script><!-- do not remove this line! -->
+</body>
+
 </html>
