Big update of scss, creation of partials and almost final version of the web

--- a/src/index.html
+++ b/src/index.html
@@ -11,24 +11,62 @@
 
 <body>
   <include src="./views/header.html"></include>
-
+  <div class="introduction">
+  <i class="fa-solid fa-magnifying-glass"></i>
+  <p>¡Te doy la bienvenida a la Biblioteca de Bego! Aquí encontrarás todos los libros que tiene y los que ha leído.</p>
+  </div>
   <div class="cards">
+  <div class="card">
     <div class="title">El juego del alma</div>
     <div class="cover"><img src="./assets/images/eljuegodelalma.jpg" alt="Portada del libro"></div>
     <div class="author">Javier Castillo</div>
     <div class="category">Novela negra</div>
-    <div class="summary"> <a href="https://www.javiercastillobooks.com/el-juego-del-alma/">Sinopsis</a></div>
+    <div class="summary"> <a href="https://www.goodreads.com/book/show/56658961">Ver en GoodReads</a></div>
 
   </div>
-  <div class="cards">
-    <div class="title">¿A qué estás esperando</div>
+  <div class="card">
+    <div class="title">¿A qué estás esperando?</div>
     <div class="cover"><img src="./assets/images/aquestasesperando.jpg" alt="Portada del libro"></div>
     <div class="author">Megan Maxwell</div>
     <div class="category">Novela romcom</div>
-    <div class="summary"> <a href="https://megan-maxwell.com/libro/a-que-estas-esperando/">Sinopsis</a></div>
+    <div class="summary"> <a href="https://www.goodreads.com/book/show/55374834">Ver en GoodReads</a></div>
+
+  </div>
+  <div class="card">
+    <div class="title">Cuando no queden más estrellas que contar</div>
+    <div class="cover"><img src="./assets/images/cuandonoquedenmasestrellasquecontar.jpg" alt="Portada del libro"></div>
+    <div class="author">María Martínez</div>
+    <div class="category">Novela romcom</div>
+    <div class="summary"> <a href="https://www.goodreads.com/es/book/show/58295801">Ver en GoodReads</a></div>
+
+  </div>
+  <div class="card">
+    <div class="title">Mi isla</div>
+    <div class="cover"><img src="./assets/images/miisla.jpg" alt="Portada del libro"></div>
+    <div class="author">Elísabet Benavent</div>
+    <div class="category">Novela romcom</div>
+    <div class="summary"> <a href="https://www.goodreads.com/book/show/29970946">Ver en GoodReads</a></div>
+
+  </div>
+  <div class="card">
+    <div class="title">Cómo (no) escribí nuestra historia</div>
+    <div class="cover"><img src="./assets/images/comonoescribinuestrahistoria.jpg" alt="Portada del libro"></div>
+    <div class="author">Elísabet Benavent</div>
+    <div class="category">Novela romcom</div>
+    <div class="summary"> <a href="https://www.goodreads.com/book/show/122496938">Ver en GoodReads</a></div>
 
   </div>
 
+  <div class="card">
+    <div class="title">Agatha Raisin y la quiche letal</div>
+    <div class="cover"><img src="./assets/images/agatharaisin1.jpg" alt="Portada del libro"></div>
+    <div class="author">M. C. Beaton</div>
+    <div class="category">Novela negra</div>
+    <div class="summary"> <a href="https://www.goodreads.com/book/show/22556556">Ver en GoodReads</a></div>
+
+  </div>
+
+</div>
   <include src="./views/footer.html"></include>
   <script type="module" src="./assets/scripts/main.js"></script><!-- do not remove this line! -->
 </body>
